[package]
name = "gd-ace-fix"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.44.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_System_Console", "Win32_System_LibraryLoader", "Win32_System_Diagnostics_Debug", "Win32_System_SystemInformation", "Win32_System_SystemServices"] }
retour = "0.1.0"
